# bittorrent2

./: .gitignore  .stylish-haskell.yaml  README.md  bittorrent2.cabal  package.yaml  stack.yaml
app/client/: Main.hs
app/server/: Main.hs
script/: bootstrap  depgraph  deploy  hoogle  test  watch
src/: BEncode.hs
src/BT2/: BEncode.hs  Messages.hs
test/: BEncodeSpec.hs  Main.hs
